--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <h1>Datastore and Firebase Auth Example</h1>
-
+ <h2> hello</h2>
   <h2>Last 10 visits</h2>
   {% for time in times %}
     <p>{{ time }}</p>
