--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,8 @@
 </div>
 <script>
  // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
+//import { initializeApp } from "firebase/app";
+//import { getAnalytics } from "firebase/analytics";
   <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"/>
  
 // TODO: Add SDKs for Firebase products that you want to use
