--- a/templates/index.html
+++ b/templates/index.html
@@ -41,14 +41,14 @@
         {% endfor %} </dd>
     </dl>
   {% elif error_message %}
-    <p>Error: {{ error_message }}</p>
+    <p>Error:{{ error_message }}</p>
   {% endif %}
 </div>
 <script>
  // Import the functions you need from the SDKs you need
 //import { initializeApp } from "firebase/app";
 //import { getAnalytics } from "firebase/analytics";
-  <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"/>
+  <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js">
  
 // TODO: Add SDKs for Firebase products that you want to use
 // https://firebase.google.com/docs/web/setup#available-libraries
