--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
   <title>Datastore and Firebase Auth Example</title>
   <script src="{{ url_for('static', filename='script.js') }}"></script>
   <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
- <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"/>
 <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
 </head>
 <body>
@@ -48,7 +48,7 @@
  // Import the functions you need from the SDKs you need
 //import { initializeApp } from "firebase/app";
 //import { getAnalytics } from "firebase/analytics";
-  <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js">
+  <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"/>
  
 // TODO: Add SDKs for Firebase products that you want to use
 // https://firebase.google.com/docs/web/setup#available-libraries
