--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 <html>
 <head>
   <title>Datastore and Firebase Auth Example</title>
-  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='script.js') }}"/>
   <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
  <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"/>
 <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
