--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
   <div id="firebaseui-auth-container"></div>
 
 <button id="sign-out" hidden=true>Sign Out</button>
-
+<h1> hello world </h1>
 <div id="login-info" hidden=true>
   <h2>Login info:</h2>
   {% if user_data %}
